# BOMIPAY

./: .alembic_output.txt  .alembic_output_utf8.txt  .env.example  .env.production.example  .gitignore  .pytest_fix_output.txt  .pytest_fix_output_utf8.txt  .pytest_focus_output_utf8.txt  .pytest_task23_output.txt  AGENT_D_DATA_LAYER_FIX.md  AGENT_D_IMPLEMENTATION_SUMMARY.md  AGENT_E_COMPLETION.md  AGENT_J_COMPLETION.md  BOMI_100_PERCENT_PILOT_READINESS_REPORT.md  BOMI_FINAL_100_PERCENT_PUSH.md  BOMI_FINAL_AGENT_A_COMPLETION.md  Dockerfile  FINAL_STATUS.txt  PILOT_READINESS_SUMMARY.txt  QUICK_REFERENCE_ASYNC_JOBS.md  README.md  TASK_002_ASYNC_ARCHITECTURE.md  TASK_003_COMPLETION.md  TASK_006_COMPLETION.md  TASK_006_IMPLEMENTATION.md  TASK_007_COMPLETION.md  TASK_009_COMPLETION.md  TASK_012_COMPLETION.md  TASK_012_QUICK_REFERENCE.md  TASK_013_COMPLETION.md  alembic-results.txt  alembic.ini  auth_token.txt  backend-test-results.txt  bomi_pay_master_implementation_context_prompt.txt  docker-compose.prod.yml  docker-compose.yml  frontend-build-results.txt  frontend-lint-results.txt  pyproject.toml  (+3 more)
CONTEXT_FILES/: bomi_pay_api_spec_pack.txt  bomi_pay_core_strategy_v1.txt  bomi_pay_database_schema_pack.txt  bomi_pay_mvp_build_plan.txt  bomi_pay_system_architecture.txt  bomi_pay_technical_product_pack.txt  prompt_upgrade
alembic/: env.py
bomipay-website/: README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
docs/: BACKUP_RESTORE.md  DEPLOYMENT.md  SECURITY.md  production_readiness.md
load-tests/: README.md  k6.config.js
nginx/: nginx.conf
scripts/: backup.sh  restore.sh  startup.sh
tests/: conftest.py  test_action_center.py  test_admin_operations.py  test_ai_assistant.py  test_ai_safety.py  test_analytics.py  test_async_jobs.py  test_auth.py  test_auth_extended.py  test_bank_accounts.py  test_bank_statements.py  test_dashboard.py  test_data_sources.py  test_error_handling.py  test_event_bus.py  test_flutterwave_adapter_staging.py  test_incidents.py  test_ledger.py  test_load_locust.py  test_merchant.py  test_money_at_risk.py  test_monnify_adapter_staging.py  test_observability.py  test_operational_visibility.py  test_payment_graph.py  test_paystack_adapter_staging.py  test_performance.py  test_provider_adapters.py  (+13 more)
(+260 files in other folders)
