[project]
name = "bomipay"
version = "0.1.0"
description = "Bomi Pay backend service for financial transaction intelligence and reconciliation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.20",
    "asyncpg>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "passlib[bcrypt]>=1.7.0",
    "python-jose[cryptography]>=3.4.0",
    "python-json-logger>=2.0.7",
    "cryptography>=41.0.0",
    "openpyxl>=3.0.0",
    "prometheus-client>=0.19.0",
    "redis[asyncio]>=4.5",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "sentry-sdk[fastapi]>=1.38.0",
    "slowapi>=0.1.9",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=0.22",
    "httpx>=0.27",
    "alembic>=1.11",
    "coverage>=7.5",
    "aiosqlite>=0.19",
    "email-validator>=1.3",
]
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]
